@@ -19,6 +19,9 @@
 	-----
 
 ========================
+04/11
+	* Added dummy information to the pet_db.txt for the Rice Cake and Xmas
+	  Goblin pets. [Skotlex]
 04/10
 	* Fixed aspd value of Fuuma Shuriken [Playtester]
 04/08
